k8s/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: shopware-staging
    labels:
        pod-security.kubernetes.io/enforce: baseline
        pod-security.kubernetes.io/audit: restricted
        pod-security.kubernetes.io/warn: restricted
