k8s/overlays/staging/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: shopware-web
spec:
    replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: shopware-worker
spec:
    replicas: 1
